--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Shay Kintzlinger",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "nodemon": "^1.18.9",
     "socket.io": "^2.2.0"
